# NexGen-Studio

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LEWIS_AI_REFACTOR_REPORT.md  LOCAL_DEPLOYMENT.md  QUICKSTART.md  README.md  SECURITY_AUDIT.md  TEST_REPORT.md  demo-docker.ps1  demo-local.ps1  docker-compose.yml  pyproject.toml  start-local-dev.ps1  start-local-dev.sh  start.sh  test_e2e_api.py  verify_deployment.py  verify_system.py  worker.py
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 20251121_normalize_creative.py  20251125_add_user_auth_fields.py  normalize_creative_fields.py
docker/: entrypoint.sh
frontend/: .eslintrc.cjs  .prettierrc.mjs  Dockerfile  next.config.mjs  package-lock.json  package.json  start-frontend.sh  stop-services.sh  tailwind.config.ts  tsconfig.json
frontend/src/app/: error.tsx  global-error.tsx  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/governance/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/studio/: page.tsx
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/layout/: AppLayout.tsx  AuthGuard.tsx  ConfigPanel.tsx  GlobalLoading.tsx  StudioHeader.tsx  StudioShell.tsx  StudioSidebar.tsx
frontend/src/components/ui/: slider.tsx  sonner.tsx
frontend/src/components/workspace/: CreativeCanvas.tsx  EnhancedProgressTracker.tsx  GeneralCanvas.tsx  SmartPromptSuggestions.tsx  StudioWorkspace.tsx
frontend/src/lib/: utils.ts
frontend/src/lib/stores/: studio.ts  types.ts
scripts/: auto-start.ps1  check_production_readiness.py  db-init.ps1  db-init.sh  init-local-db.ps1  pre-deploy-check.ps1  seed_data.py  setup-env.ps1  setup-local-services.ps1  start-local-app.ps1  start-local-databases.ps1  start-local.ps1  stop-databases.ps1  stop-databases.sh  stop-local.ps1
src/lewis_ai_system/: __init__.py  agents.py  auth_real.py  cli.py  config.py  cost_monitor.py  costs.py  database.py  main.py  provider_throttle.py  providers.py  redis_cache.py  s3_storage.py  sandbox.py  task_queue.py  tenant_policy.py  tooling.py  vector_db.py  versioning.py
src/lewis_ai_system/agents/: __init__.py  creative.py  general.py  output_formatter.py  planning.py  pool.py  quality.py
src/lewis_ai_system/creative/: __init__.py  batch_processing.py  consistency_manager.py  image_generation.py  models.py  monitoring.py  repository.py  workflow.py
src/lewis_ai_system/general/: __init__.py  session.py
src/lewis_ai_system/governance/: __init__.py
src/lewis_ai_system/routers/: __init__.py  auth.py  creative.py  general.py  governance.py  versioned.py
src/nexgen_studio/: __init__.py  agents.py  auth.py  auth_real.py  cli.py  config.py  cost_monitor.py  costs.py  instrumentation.py  main.py  provider_throttle.py  providers.py  redis_cache.py  s3_storage.py  serialization.py  storage.py  tenant_policy.py  tooling.py  vector_db.py
src/nexgen_studio/creative/: __init__.py  consistency.py  image_generation.py  repository.py  workflow.py
src/nexgen_studio/general/: models.py  repository.py  session.py
src/nexgen_studio/governance/: __init__.py  models.py  service.py
src/nexgen_studio/routers/: __init__.py  creative.py  general.py  governance.py
tests/: conftest.py  test_agents.py  test_auth.py  test_boundary_cases.py  test_consistency_control.py  test_consistency_control_integration.py  test_creative_optimization.py  test_creative_workflow.py  test_e2e_fixed.py  test_e2e_integration.py  test_e2e_scenarios.py  test_external_apis.py  test_full_system.py  test_general_memory.py  test_general_optimization.py  test_general_session.py  test_governance.py  test_new_features.py  test_providers.py  test_real_apis.py  test_video_provider_routing.py
