[project]
name = "nexgen-studio"
version = "1.0.0"
description = "NexGen Studio - AI-powered video generation and intelligent assistant platform"
authors = [{ name = "NexGen Studio", email = "dev@nexgen.studio" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",  # Async Postgres driver
    "alembic>=1.13.0",  # Database migrations
    "httpx>=0.27.0",
    "tenacity>=8.2.3",
    "python-dateutil>=2.9.0",
    "python-jose[cryptography]>=3.3.0",  # JWT tokens
    "passlib[bcrypt]>=1.7.4",  # Password hashing
    "boto3>=1.34.0",  # S3 storage
    "redis>=5.0.0",  # Caching and rate limiting
    "arq>=0.25.0",  # Async task queue
    "python-multipart>=0.0.6",  # File uploads
    "e2b-code-interpreter>=0.0.10",  # E2B Sandbox
    "openai>=1.0.0",  # For DALL-E image generation
]

[project.optional-dependencies]
vector = [
    "weaviate-client>=4.0.0",  # Vector database
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.5",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
